@@ -6,13 +6,13 @@ import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.io.InputStream;
 
+import com.tagtraum.perf.gcviewer.UnittestHelper;
+import com.tagtraum.perf.gcviewer.UnittestHelper.FOLDER;
+import com.tagtraum.perf.gcviewer.model.GCModel;
 import com.tagtraum.perf.gcviewer.model.GcResourceFile;
 import org.junit.Rule;
 import org.junit.Test;
 import org.junit.rules.TestName;
-
-import com.tagtraum.perf.gcviewer.UnittestHelper;
-import com.tagtraum.perf.gcviewer.model.GCModel;
 
 /**
  * Tests the logic of the {@link DataReaderFactory}
@@ -29,15 +29,15 @@ public class TestDataReaderFactory {
     public TestName name = new TestName();
 
     private InputStream getInputStreamIBM(String fileName) throws IOException {
-        return UnittestHelper.getResourceAsStream(UnittestHelper.FOLDER_IBM, fileName);
+        return UnittestHelper.getResourceAsStream(FOLDER.IBM, fileName);
     }
 
     private InputStream getInputStreamJRockit(String fileName) throws IOException {
-        return UnittestHelper.getResourceAsStream(UnittestHelper.FOLDER_JROCKIT, fileName);
+        return UnittestHelper.getResourceAsStream(FOLDER.JROCKIT, fileName);
     }
     
     private InputStream getInputStreamOpenJdk(String fileName) throws IOException {
-        return UnittestHelper.getResourceAsStream(UnittestHelper.FOLDER_OPENJDK, fileName);
+        return UnittestHelper.getResourceAsStream(FOLDER.OPENJDK, fileName);
     }
     
     private void assertDataReader(
@@ -310,6 +310,35 @@ public class TestDataReaderFactory {
         // (DataReaderSun1_6_0 handles java 1.4, 1.5, 1.6, 1.7)
         DataReaderFactory factory = new DataReaderFactory();
         DataReader dr = factory.getDataReader(new GcResourceFile("byteArray"), new ByteArrayInputStream("2.23492e-006: [GC 1087K->462K(16320K), 0.0154134 secs]".getBytes()));
+        assertDataReader(DataReaderSun1_6_0.class, dr.getClass());
+    }
+
+    @Test
+    public void testOracleG1J8() throws Exception {
+        DataReaderFactory factory = new DataReaderFactory();
+        DataReader dr = factory.getDataReader(new GcResourceFile("byteArray"), new ByteArrayInputStream(("Java HotSpot(TM) 64-Bit Server VM (25.112-b15) for windows-amd64 JRE (1.8.0_112-b15), built on Sep 22 2016 21:31:56 by \"java_re\" with MS VC++ 10.0 (VS2010)\n" +
+                "Memory: 4k page, physical 50331128k(13997304k free), swap 60569268k(13009848k free)\n" +
+                "CommandLine flags: -XX:CICompilerCount=4 -XX:ConcGCThreads=3 -XX:G1HeapRegionSize=2097152 -XX:GCLogFileSize=1048576 -XX:InitialHeapSize=4294967296 -XX:+ManagementServer -XX:MarkStackSize=4194304 -XX:MaxHeapSize=8589934592 -XX:MaxNewSize=5152702464 -XX:MinHeapDeltaBytes=2097152 -XX:NumberOfGCLogFiles=5 -XX:-OmitStackTraceInFastThrow -XX:+ParallelRefProcEnabled -XX:+PrintGC -XX:+PrintGCDateStamps -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -XX:+PrintTenuringDistribution -XX:+ReduceSignalUsage -XX:+UseCompressedClassPointers -XX:+UseCompressedOops -XX:+UseFastUnorderedTimeStamps -XX:+UseG1GC -XX:+UseGCLogFileRotation -XX:-UseLargePagesIndividualAllocation\n" +
+                "2017-12-01T14:14:50.781-0600: 1501608.217: [GC pause (G1 Evacuation Pause) (mixed)\n").getBytes()));
+        assertDataReader(DataReaderSun1_6_0G1.class, dr.getClass());
+    }
+
+    @Test
+    public void testOracleG1J8_StringDeduplication() throws Exception {
+        DataReaderFactory factory = new DataReaderFactory();
+        DataReader dr = factory.getDataReader(new GcResourceFile("byteArray"),
+                getInputStreamOpenJdk("SampleSun1_8_0G1StringDeduplication.txt"));
+        assertDataReader(DataReaderSun1_6_0G1.class, dr.getClass());
+    }
+
+    @Test
+    public void testOracleShenandoahJ8Simple() throws Exception {
+        DataReaderFactory factory = new DataReaderFactory();
+        DataReader dr = factory.getDataReader(new GcResourceFile("byteArray"), new ByteArrayInputStream((
+                "OpenJDK 64-Bit Server VM (25.161-b14) for linux-amd64 JRE (1.8.0_161-b14), built on Jan  9 2018 19:54:33 by \"mockbuild\" with gcc 4.8.5 20150623 (Red Hat 4.8.5-16)\n" +
+                "Memory: 4k page, physical 8002012k(4357532k free), swap 2097148k(1656904k free)\n" +
+                "CommandLine flags: -XX:HeapDumpPath=/work -XX:InitialHeapSize=2147483648 -XX:LogFile=/log/jvm.log -XX:+LogVMOutput -XX:+ManagementServer -XX:MaxHeapSize=2147483648 -XX:+PrintGC -XX:+PrintGCTimeStamps -XX:+UnlockDiagnosticVMOptions -XX:+UseCompressedClassPointers -XX:+UseCompressedOops -XX:-UseNUMA -XX:+UseShenandoahGC \n" +
+                "13.976: [Pause Init Mark, 3.587 ms]\n").getBytes()));
         assertDataReader(DataReaderSun1_6_0.class, dr.getClass());
     }
 
